# Assistant-with-Rag-backend

./: main.py  pyproject.toml
app/chroma_store/: chroma.sqlite3
src/: setup.py
src/app/chroma_store/: chroma.sqlite3
src/app/openai/: openai_connectivity.py
src/app/rag_chatbot_pipeline/data_handler/: data_operations.py
src/app/routes/: main_routes.py  webscrap_routes.py
