[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Harry5174 <harisjaved010@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
requests = "^2.32.2"
bs4 = "^0.0.2"
pdfkit = "^1.0.0"
langchain-community = "^0.2.0"
pypdf = "^4.2.0"
langchain-openai = "^0.1.7"
chromadb = "^0.5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
